--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -1,6 +1,6 @@
 <div class="top-page-bar">
-    <button class="back-button">
-        <a class="back-button-wrapper button-wrapper" href="/eventlist">
+    <button class="back-link">
+        <a class="button-wrapper" href="/eventlist">
             <i class="lni lni-arrow-left"></i>
             <p>Back</p>
         </a>
