fixed event list
fixed the display issue in event list when using the search bar

--- a/public/common/eventDetails.css
+++ b/public/common/eventDetails.css
@@ -20,6 +20,7 @@
     z-index: 10;
     padding: var(--container-padding);
     background-color: var(--card-bg);
+    gap: var(--big-gap);
 }
 
 #details-edit-button {
