fix: team list grid view

--- a/public/common/eventDetails.css
+++ b/public/common/eventDetails.css
@@ -3,6 +3,8 @@
     color: var(--secondary-fg);
     padding: var(--container-padding);
     border-radius: var(--container-radius);
+    display: grid;
+    grid-auto-flow: row;
 }
 
 .event-controls {
