--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -80,6 +80,9 @@
             </div>
             <div class="form-page">
                 <h1 class="secondary-header">Assign team members</h1>
+                <div class="team-grid">
+                    {{>teamMember}}
+                </div>
             </div>
             <div class="form-page">
                 <h1 class="secondary-header">Review</h1>
