--- a/views/partials/teamMember.hbs
+++ b/views/partials/teamMember.hbs
@@ -1,4 +1,4 @@
-<div class="team-member container"
+<div class="team-member-card card"
     data-email="{{email}}"
     data-bio="{{bio}}"
     data-role="{{role}}"
