fix: change mobile layout for create events page

--- a/public/common/eventCreate.css
+++ b/public/common/eventCreate.css
@@ -36,3 +36,9 @@
 .form-controls {
     align-self: flex-end;
 }
+
+@media screen and (max-width: 800px) {
+    .form-row {
+        flex-direction: column;
+    }
+}
