--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -88,7 +88,7 @@
                     </div>
                     <div class="team-mini-grid" id="memberSearchResults">
                         {{#each members}}
-                            {{>teamMemberMiniUnselected this}}
+                            {{>teamMemberMini this}}
                         {{else}}
                             <p>No members currently</p>
                         {{/each}}
