--- a/views/partials/teamMemberMini.hbs
+++ b/views/partials/teamMemberMini.hbs
@@ -11,6 +11,6 @@
     <div class="team-member-mini-picture" style="background-image: url('{{pfp}}');"></div>
     <span id="full-name">{{firstName}} {{lastName}}</span>
     <span id="role">{{role}}</span>
-    <span id="contact-no">{{formatPhone _id}}</span>
-    <i class="lni lni-plus"></i>
+    <i id="teamMiniAddButton" class="lni lni-plus"></i>
+    <i id="teamMiniRemoveButton" class="lni lni-xmark"></i>
 </button>
