feat: add submit button

--- a/public/common/eventCreate.css
+++ b/public/common/eventCreate.css
@@ -38,6 +38,10 @@
     background: var(--card-bg);
 }
 
+.form-hidden-button {
+    display: none;
+}
+
 .grid-container {
     display: flex;
     flex-direction: column;
