--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -122,6 +122,12 @@
                     <p>Next</p>
                 </div>
             </button>
+            <button type="submit" class="fg-button button" id="form-submit-button" disabled>
+                <div class="button-wrapper">
+                    <i class="lni lni-check"></i>
+                    <p>Submit</p>
+                </div>
+            </button>
         </div>
     </form>
 </div>
