--- a/views/notifications.hbs
+++ b/views/notifications.hbs
@@ -1,7 +1,7 @@
 <h1 class="header"> Notifications </h1>
 <form role="search" class="search-bar" id="eventSearchForm">
         <button type="submit"><i class="lni lni-search-1"></i></button>
-        <input type="search" name="q" id="eventSearchInput" placeholder="Search events...">
+        <input type="search" name="q" id="eventSearchInput" placeholder="Search events..." value="{{searchQuery}}">
 </form>
 <div class="upcoming-events-container">
     {{#each notifications}}
