--- a/public/common/global.css
+++ b/public/common/global.css
@@ -673,9 +673,23 @@ a {
     flex-grow: 1;
 }
 
+.team-member-medium-details {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    flex-grow: 1;
+    width: 70%;
+    color: var(--primary-fg);
+}
+
 #full-name {
     font-weight: bold;
     font-size: 1.2rem;
+}
+
+#full-name-medium {
+    font-weight: bold;
+    font-size: 1rem;
 }
 
 .team-member[data-role="Manager"] #full-name {
@@ -694,6 +708,10 @@ a {
     font-size: 0.8rem;
 }
 
+#contact-no-medium {
+    font-size: 0.8rem;
+}
+
 .team-member[data-role="Manager"] #contact-no {
     color: #FFFFFF;
  
@@ -701,4 +719,45 @@ a {
         flex-direction: column;
         align-items: flex-start;
     }
+}
+
+.members-box {
+    background-color: var(--primary-bg);
+    color: var(--secondary-fg);
+    padding: var(--container-padding);
+    border-radius: var(--container-radius);
+}
+
+.attendance-box {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 100%;
+    background-color: #FFFFFF;
+    padding: 30px;
+    border-radius: 24px;
+    box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
+    transition: all 0.5s ease;
+    overflow: hidden;
+    cursor: pointer;
+    position: relative;
+    margin-bottom: var(--medium-gap);
+}
+
+.attendance-button-container {
+    display: flex;
+    gap: var(--small-gap);
+    justify-content: flex-end;
+}
+
+#present-button.selected {
+    background: none;
+    border-color: var(--accent-light);
+    background-color: var(--accent-light);
+}
+
+#absent-button.selected {
+    background: none;
+    border-color: var(--accent-light);
+    background-color: var(--accent-light);
 }
