--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -58,7 +58,7 @@
                     <p>Edit</p>
                 </a>
             </button>
-            <form action="/deleteEvent?id={{event._id}}" method="POST" onsubmit="return confirm('Are you sure you want to delete this event?');">
+            <form action="/deleteEvent?id={{event._id}}">
                     <button type="submit" class="bg-button button" id="details-delete-button">
                     <span class="bg-button-wrapper button-wrapper">
                     <i class="lni lni-xmark"></i>
@@ -154,6 +154,15 @@
         <p id="emptyMessage" style="display: none;">No matching team members found.</p>
         </div>
     </div>
+
+    {{#if showButtons}}
+        <button class="fg-button button" id="attendance-check-button">
+            <a class="fg-button-wrapper button-wrapper" href="/eventAttendance?id={{event._id}}">
+                <i class="lni lni-user-multiple-4"></i>
+                <p>Check attendance</p>
+            </a>
+        </button>
+    {{/if}}
 
     <script>
     const teamId = '{{team._id}}'; //gets the teamid in eventDetailsController
