Refactor attendance finalization logic and add data-attendance attribute to attendance boxes to remove auto assignment of absent status

--- a/views/partials/attendanceBox.hbs
+++ b/views/partials/attendanceBox.hbs
@@ -1,4 +1,4 @@
-<div class="attendance-box container" data-id="{{_id}}" data-role="{{@root.role}}" data-index="{{index}}">
+<div class="attendance-box container" data-id="{{_id}}" data-role="{{@root.role}}" data-index="{{index}}" data-attendance="{{attendance}}">
     <div class="team-member-medium-details">
         <span id="full-name-medium">{{firstName}} {{lastName}}</span>
         <span id="contact-no-medium">{{formatPhone _id}}</span>
