feat: fix search bar mobile appearance

--- a/public/common/global.css
+++ b/public/common/global.css
@@ -37,7 +37,7 @@
     --medium-gap: 1rem;
     --big-gap: 2rem;
     
-    --container-padding: 1.5rem 2.5rem;
+    --container-padding: 2rem 2.5rem;
     --card-padding: 1.25rem 2rem;
     --button-padding: 0.5rem 1rem;
     --sidebar-padding: 1.5rem;
@@ -90,6 +90,10 @@ a {
     border-radius: var(--circle-radius);
     z-index: -5;
     pointer-events: none;
+}
+
+.logo-container {
+    display: flex;
 }
 
 .logo {
@@ -192,6 +196,7 @@ a {
     letter-spacing: 4px;
     text-transform: uppercase;
     font-size: 1.2rem;
+    margin: 0;
 }
 
 .secondary-header {
@@ -200,6 +205,7 @@ a {
     text-transform: uppercase;
     font-size: 1rem;
     color: var(--secondary-fg);
+    margin: 0;
 }
 
 .text-field-container {
@@ -225,14 +231,6 @@ a {
     font-size: 0.9rem;
     color: var(--primary-fg);
     flex: 1;
-}
-
-.header2 {
-    font-family: var(--main-font);
-    letter-spacing: 4px;
-    text-transform: uppercase;
-    font-size: medium;
-    color: var(--secondary-fg);
 }
 
 .image {
@@ -333,6 +331,15 @@ a {
     background-color: var(--primary-bg);
     overflow-y: auto;
     position: relative;
+    display: flex;
+    flex-direction: column;
+    gap: var(--medium-gap);
+}
+
+.card-list {
+    display: flex;
+    flex-direction: column;
+    gap: var(--small-gap);
 }
 
 .event-box {
@@ -461,19 +468,13 @@ a {
     transition: color 0.15s;
 }
 
-.upcoming-events-container {
-    box-sizing: border-box;
-    display: flex;
-    flex-direction: column;
-    gap: var(--medium-gap);
-}
-
 .button {
     box-sizing: border-box;
     border-radius: var(--button-radius);
+    border: none;
     padding: 0rem 1rem;
     cursor: pointer;
-    transition: color 0.15s, background-color 0.15s, border-color 0.15s;
+    transition: color 0.15s, background-color 0.15s, box-shadow 0.15s;
 }
 
 .button-wrapper {
@@ -491,13 +492,11 @@ a {
 }
 
 .fg-button {
-    border: 1px solid var(--primary-fg);
     background-color: var(--primary-fg);
 }
 
 .fg-button:hover {
     background: none;
-    border-color: var(--accent-light);
     background-color: var(--accent-light);
 }
 
@@ -511,11 +510,11 @@ a {
 
 .bg-button {
     background: none;
-    border: 1px solid var(--primary-fg);
+    box-shadow: inset 0 0 0 1px var(--primary-fg);
 }
 
 .bg-button:hover {
-    border: 1px solid var(--accent-medium);
+    box-shadow: inset 0 0 0 1px var(--accent-medium);
 }
 
 .bg-button:hover .button-wrapper {
@@ -549,7 +548,7 @@ a {
 
 .disabled-button {
     color: var(--border-light);
-    border: 1px solid var(--border-light);
+    box-shadow: inset 0 0 0 1px var(--border-light);
     background: transparent;
     cursor: not-allowed;
 }
@@ -557,34 +556,36 @@ a {
 .destructive-button {
     background-color: var(--error-light);
     color: var(--primary-bg);
-    border: 1px solid var(--error-light);
 }
 
 .destructive-button:hover {
     background-color: var(--error-dark);
-    border-color: var(--error-dark);
 }
 
 .top-page-bar {
     display: flex;
+    align-items: stretch;
+    gap: var(--small-gap);
+}
+
+.page-title-bar {
+    display: flex;
     align-items: center;
-    gap: var(--medium-gap);
-    padding: 0;
-    margin: 0;
-    height: var(--top-bar-height);
+    gap: var(--small-gap);
+    height: 2rem;
 }
 
 .search-bar {
     display: flex;
     align-items: center;
-    width: 40%;
     background-color: var(--primary-bg);
     border-radius: var(--container-radius);
     border-style: solid;
     border-width: 0.1rem;
     border-color: var(--border-light);
-    padding: 0.4rem 1rem;
+    padding: 0.5rem 1rem;
     gap: var(--small-gap);
+    flex-grow: 1;
 }
 
 .search-bar input {
@@ -690,20 +691,26 @@ a {
     .main-content {
         height: calc(100vh - (1.5 * var(--medium-gap)) - var(--top-bar-height));
     }
-    
+
     .global-sidebar {
         position: absolute;
-        top: calc(var(--top-bar-height) + (2 * var(--small-gap)));
+        top: 0;
+        left: 0;
+        border-radius: 0px;
         z-index: 1000;
-        width: calc(100vw - (2 * var(--small-gap)));
-        height: calc(100vh - (1.5 * var(--top-bar-height)));
+        width: 100vw;
+        height: 100vh;
         margin: 0;
         opacity: 0;
         transform: scale(0.98);
         pointer-events: none;
         backdrop-filter: blur(20px);
-
         transition: opacity 0.25s, transform 0.15s;
+    }
+
+    .logo-container {
+        display: flex;
+        justify-content: end;
     }
 
     .mobile-top-bar {
@@ -719,6 +726,7 @@ a {
         color: var(--primary-bg);
         font-family: var(--main-font);
         cursor: pointer;
+        z-index: 10000;
     }
 
     .mobile-top-bar-button i {
@@ -787,13 +795,6 @@ a {
         flex-direction: column;
         align-items: flex-start;
     }
-}
-
-.members-box {
-    background-color: var(--primary-bg);
-    color: var(--secondary-fg);
-    padding: var(--container-padding);
-    border-radius: var(--container-radius);
 }
 
 .attendance-box {
