--- a/views/eventAttendance.hbs
+++ b/views/eventAttendance.hbs
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<div class="top-page-bar">
+<div class="page-title-bar">
     <button class="back-link" id="page-back-button">
         <a class="button-wrapper" href="#">
             <i class="lni lni-arrow-left"></i>
@@ -32,7 +32,7 @@
 
 <div class="event-attendance card">
     <div class="attendance-team">
-        <h2 class="header2">Team Members</h2>
+        <h2 class="secondary-header">Team Members</h2>
         <div class="members-box">
             {{#if teamMembers.length}}
                 {{#each teamMembers}}
@@ -45,7 +45,7 @@
     </div>
 
     <div class="attendance-supplier">
-        <h2 class="header2">Suppliers</h2>
+        <h2 class="secondary-header">Suppliers</h2>
         <div class="members-box">
             <p>Currently no suppliers in this event.</p>
         </div>
