--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -19,7 +19,7 @@
     </div>
 </div>
 
-<div class="top-page-bar">
+<div class="page-title-bar">
     <button class="back-link" id="page-back-button">
         <div class="button-wrapper">
             <i class="lni lni-arrow-left"></i>
