--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -40,7 +40,7 @@
     </div>
 </div>
 
-<div class="top-page-bar">
+<div class="page-title-bar">
     <button class="back-link">
         <a class="button-wrapper" href="/eventlist">
             <i class="lni lni-arrow-left"></i>
