--- a/views/login.hbs
+++ b/views/login.hbs
@@ -6,7 +6,7 @@
         </header>
     </section>
 
-    <section>
+    <section id="login-form">
         <h1 class="header">Welcome back</h1>
 
         <form class="login-input-form" method="POST" action="/login">
