--- a/views/partials/sidebar.hbs
+++ b/views/partials/sidebar.hbs
@@ -6,7 +6,7 @@
     </button>
 </nav>
 <nav class="global-sidebar" id="global-sidebar">
-    <section>
+    <section class="logo-container">
         <header class="logo">
             <div class="logo-image"></div>
             <h1 class="logo-text header">Team Hub</h1>
