--- a/public/common/login.css
+++ b/public/common/login.css
@@ -23,7 +23,14 @@ a {
     border-radius: 0px;
     display: flex;
     flex-direction: column;
-    gap: 8rem;
+    justify-content: space-between;
+    gap: var(--big-gap);
+}
+
+#login-form {
+    display: flex;
+    flex-direction: column;
+    gap: var(--medium-gap);
 }
 
 .forgot {
@@ -44,13 +51,14 @@ a {
     padding: var(--medium-gap);
     box-sizing: border-box;
     border-radius: var(--input-field-radius);
-    border: 1px solid var(--login-border);
+    border: none;
+    box-shadow: inset 0 0 0 1px var(--login-border);
 }
 
 .login-button {
     background-color: var(--login-field-bg);
     color: var(--main-fg);
-    border: 1px solid var(--login-border);
+    box-shadow: inset 0 0 0 1px var(--login-border);
     font-family: var(--main-font);
     display: flex;
     align-items: center;
@@ -73,7 +81,7 @@ a {
 .login-button:active {
     background-color: var(--accent-light);
     color: var(--accent-dark);
-    border-color: var(--accent-dark);
+    box-shadow: inset 0 0 0 1px var(--accent-dark);
 }
 
 .login-button-wrapper {
