--- a/public/common/teamList.css
+++ b/public/common/teamList.css
@@ -1,11 +1,3 @@
-.team-list-top {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    margin-bottom: var(--medium-gap);
-    margin-top: var(--medium-gap);
-}
-
 .members-box {
     box-sizing: border-box;
     display: grid;
@@ -22,4 +14,10 @@
     display: flex;
     flex-direction: column;
     gap: var(--medium-gap);
+}
+
+.team-member-types {
+    display: flex;
+    flex-direction: column;
+    gap: var(--small-gap);
 }
