--- a/views/partials/notification.hbs
+++ b/views/partials/notification.hbs
@@ -1,4 +1,4 @@
-<div class="event-box container">
+<div class="event-box card">
   <div class="event-box-top">
     <span class="event-name">
       <span class="event-name">
