--- a/public/common/eventDetails.css
+++ b/public/common/eventDetails.css
@@ -19,6 +19,10 @@
     gap: var(--medium-gap);
 }
 
+#details-top-box {
+    font-size: 1.5rem;
+}
+
 .event-details {
     display: flex;
     flex-direction: column;
@@ -26,7 +30,7 @@
     z-index: 10;
     padding: var(--container-padding);
     background-color: var(--card-bg);
-    gap: var(--big-gap);
+    gap: var(--small-gap);
 }
 
 #details-edit-button {
