--- a/public/common/global.css
+++ b/public/common/global.css
@@ -125,9 +125,30 @@ a {
     box-shadow: var(--card-shadow);
 }
 
+.card-title {
+    font-size: 1.1rem;
+    font-weight: 600;
+}
+
+.card-header {
+    font-weight: 500;
+}
+
+.card-description-item {
+    display: flex;
+    align-items: center;
+    gap: var(--small-gap);
+    flex-direction: row;
+}
+
+.card-description-item i {
+    font-size: var(--icon-size);
+    color: var(--secondary-fg);
+}
+
 .team-member-card {
     background-color: transparent;
-    border: 1px solid var(--border-dark);
+    box-shadow: inset 0 0 0 1px var(--border-dark);
 }
 
 .team-member-card[data-role="Manager"] {
@@ -139,7 +160,7 @@ a {
     display: flex;
     align-items: center;
     justify-content: center;
-    border: transparent;
+    border: none;
     border-radius: var(--button-radius);
     background-color: var(--primary-bg);
     padding: var(--button-padding);
@@ -224,11 +245,12 @@ a {
 }
 
 .text-field {
-    border: 1px solid var(--border-dark);
+    box-shadow: inset 0 0 0 1px var(--border-dark);
+    border: none;
     padding: 0.5rem 1rem;
     border-radius: var(--input-field-radius);
     font-family: var(--main-font);
-    font-size: 0.9rem;
+    font-size: 0.8rem;
     color: var(--primary-fg);
     flex: 1;
 }
@@ -344,13 +366,9 @@ a {
 
 .event-box {
     box-sizing: border-box;
-    display: grid;
-    grid-auto-flow: row;
-    grid-row-gap: var(--medium-gap);
-    width: 100%;
-    background-color: #FFFFFF;
-    padding: 30px;
-    border-radius: 24px;
+    display: flex;
+    flex-direction: column;
+    gap: var(--small-gap);
     box-shadow: 0px 0px 4px 0px rgba(0, 0, 0, 0.1);
     transition: all 0.5s ease;
     overflow: hidden;
@@ -371,32 +389,22 @@ a {
 .event-box-top {
     display: flex;
     justify-content: space-between;
-    align-items: center;
+    align-items: start;
+    font-weight: 600;
 }
 
-#event-name {
-    font-size: 1.1rem;
-    float: left;
-    font-weight: 500;
+.main-event-info {
+    display: flex;
+    flex-direction: column;
 }
 
 #client-name {
     font-size: 0.9rem;
-    float: right;
+    font-weight: 400;
 }
 
-#details-top-box {
-    font-size: 1.5rem;
-}
-
-.event-box-bottom {
-    gap: var(--medium-gap);
-}
-
-.event-box-bottom > div {
-    display: flex;
-    flex-direction: column;
-    gap: 0.5rem;
+#location {
+    color: var(--secondary-fg);
 }
 
 #details-box {
@@ -421,18 +429,6 @@ a {
 #description-span span {
     display: flex;
     flex-direction: column;
-    gap: 0.5rem;
-}
-
-.event-box-bottom span {
-    display: inline-block;
-    margin-bottom: var(--small-gap);
-    font-size: 0.8rem;
-    overflow: hidden;
-    display: -webkit-box;
-    -webkit-line-clamp: 2;
-            line-clamp: 2;
-    -webkit-box-orient: vertical;
 }
 
 .notif-controls {
@@ -444,12 +440,11 @@ a {
 }
 
 .back-link {
-    box-sizing: border-box;
-    width: fit-content;
     background: none;
     border: none;
-    padding: 0rem 1rem;
     cursor: pointer;
+    padding: 0;
+    margin: 0;
 }
 
 .back-link:hover .button-wrapper {
@@ -472,9 +467,12 @@ a {
     box-sizing: border-box;
     border-radius: var(--button-radius);
     border: none;
-    padding: 0rem 1rem;
+    padding: var(--button-padding);
     cursor: pointer;
     transition: color 0.15s, background-color 0.15s, box-shadow 0.15s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .button-wrapper {
@@ -485,6 +483,11 @@ a {
     list-style-type: none;
     font-size: 0.8rem;
     font-family: var(--main-font);
+}
+
+.button-wrapper p {
+    margin: 0;
+    padding: 0;
 }
 
 .button-wrapper i {
@@ -571,8 +574,7 @@ a {
 .page-title-bar {
     display: flex;
     align-items: center;
-    gap: var(--small-gap);
-    height: 2rem;
+    gap: var(--medium-gap);
 }
 
 .search-bar {
@@ -625,7 +627,7 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1000;
+    z-index: 100001;
     opacity: 1;
     transition: opacity 0.25s;
 }
@@ -652,30 +654,43 @@ a {
     margin: 0;
 }
 
+.modal-controls {
+    display: flex;
+    gap: var(--small-gap);
+}
+
 .modal-hidden {
     opacity: 0;
     transform: scale(0.95);
     pointer-events: none;
 }
 
+#status {
+    border-radius: var(--button-radius);
+    display: inline;
+    padding: 0.1rem 0.5rem;
+    text-transform: capitalize;
+}
+
 #status[data-status="planning"] {
-    color: var(--accent-light);
+    background-color: var(--accent-light);
 }
 
 #status[data-status="in progress"] {
-    color: var(--accent-light);
+    background-color: var(--accent-light);
 }
 
 #status[data-status="cancelled"] {
-    color: var(--error-light);
+    background-color: var(--error-light);
 }
 
 #status[data-status="postponed"] {
-    color: var(--accent-dark);
+    background-color: var(--accent-dark);
+    color: var(--primary-bg);
 }
 
 #status[data-status="completed"] {
-    color: var(--success-light);
+    background-color: var(--success-light);
 }
 
 
@@ -731,6 +746,12 @@ a {
 
     .mobile-top-bar-button i {
         font-size: var(--icon-size);
+    }
+}
+
+@media (pointer: coarse) {
+    * {
+        --button-padding: 1rem 1.5rem;
     }
 }
 
