--- a/views/eventCreate.hbs
+++ b/views/eventCreate.hbs
@@ -143,7 +143,7 @@
             <button type="submit" class="fg-button button" id="form-submit-button" disabled>
                 <div class="button-wrapper">
                     <i class="lni lni-check"></i>
-                    <p>Submit</p>
+                    <p>Create event</p>
                 </div>
             </button>
         </div>
