--- a/views/eventDetails.hbs
+++ b/views/eventDetails.hbs
@@ -59,9 +59,9 @@
                 </a>
             </button>
             <form action="/deleteEvent?id={{event._id}}">
-                    <button type="submit" class="bg-button button" id="details-delete-button">
+                    <button type="submit" class="destructive-button button" id="details-delete-button">
                     <span class="bg-button-wrapper button-wrapper">
-                    <i class="lni lni-xmark"></i>
+                    <i class="lni lni-trash-3"></i>
                          <p>Delete</p>
                     </span>
                     </button>
@@ -81,17 +81,20 @@
             <span id="location"></span>
         </span>
         <span id="contact">
-            <span><strong>Contact Person</strong></span>
+            <span>Contact Person</span>
             <span id="contact-name"></span>
             <span id="contact-info"></span>
         </span>
         <span id="description-span">
-            <span><strong>Description</strong></span>
+            <span>Description</span>
             <span id="description"></span>
         </span>
     </div>
 
-    <span id="status"></span>
+    <div class="event-box-bottom">
+        <span id="status"></span>
+
+    </div>
     
         <div class="choice-buttons" id="details-choices">
             {{#if showButtons}}
