--- a/views/partials/eventBox.hbs
+++ b/views/partials/eventBox.hbs
@@ -12,11 +12,11 @@
         <span id="status" data-status="{{status}}">{{status}}</span>
     </div>
     <div class="card-group">
-        <div class="card-description-item">
+        <div class="card-description-item card-secondary">
             <i class="lni lni-calendar-days"></i>
             <span id="date"> {{eventDate}}</span>
         </div>
-        <div class="card-description-item">
+        <div class="card-description-item card-secondary">
             <i class="lni lni-map-pin-5"></i>
             <span id="location">{{location}}</span>
         </div>
