fix: change no results found error message wording to be neutral

--- a/views/layouts/main.hbs
+++ b/views/layouts/main.hbs
@@ -36,7 +36,7 @@
 <template id="no-results-container">
     <div class="no-results-container">
         <i class="lni lni-emoji-sad"></i>
-        <p class="no-results-message">No events found</p>
+        <p class="no-results-message">No results found</p>
     </div>
 </template>
 </html>
