fix: clicking on event in event list doesn't work

--- a/views/partials/eventBox.hbs
+++ b/views/partials/eventBox.hbs
@@ -6,7 +6,7 @@
 >
     <div class="event-box-top">
         <div class="main-event-info">
-            <span class="card-title">{{eventName}}</span>
+            <span id="event-name" class="card-title">{{eventName}}</span>
             <span id="client-name">{{clientFirstName}} {{clientLastName}}</span>
         </div>
         <span id="status" data-status="{{status}}">{{status}}</span>
